# rust_nca

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
crates/egui_widgets/: Cargo.toml
crates/egui_widgets/src/: code_editor.rs  glam_helpers.rs  iq_gradiant.rs  lib.rs  nalgebra_helpers.rs  syntax_highlighting.rs
crates/skeleton_app/: Cargo.toml
crates/skeleton_app/src/: app.rs  gui_render_wgpu.rs  input.rs  lib.rs
crates/wgpu_core_utils/: Cargo.toml
crates/wgpu_core_utils/src/: lib.rs
src/: app.rs  appState.rs  egui_widgets.rs  lib.rs  main.rs  nca_app.rs  preset.rs  simulation_data.rs  syntax_highlighting.rs  utils.rs  view_data.rs
src/nca_app/: pipeline_helpers.rs  preset.rs  simulation_data.rs  view_data.rs
src/shaders/: Screen.wgsl  init_simulation.wgsl  simulation.wgsl  simulationBase.wgsl
src/utils/: BuildInUniforms.rs  State.rs  appState.rs  logger.rs  ping_pong_texture.rs
src/utils/State/: gui_render_wgpu.rs  simulation_data.rs
