[package]
name = "rust_nca"
version = "0.1.1"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
oxyde = {git = 'https://github.com/dsmtE/oxyde' }
egui_widgets = {path = "crates/egui_widgets", features = ["nalgebra", "serde", "syntax_highlighting"]}

anyhow = "1"
bytemuck = { version = "1", features = [ "derive" ] }
log = "0.4"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }

crevice = { version = "0.14.0", features = ["nalgebra"] }
nfd2 = "0.3"

lazy_static = "1"

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/oxyde"]
oxyde = { path = "crates/oxyde" }

[[bin]]
name = "rust_nca"
path = "src/main.rs"
