[package]
name = "egui_widgets"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[dependencies]

egui = "0.17.0"
epi = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui_winit_platform = "0.14.0"

serde = { version = "1.0.137", features = ["derive"], optional = true}
enum-map = { version = "2"}
nalgebra-glm = { version = "0.17.0", optional = true}
crevice = { version = "0.10.0" }

lazy_static = "1.4.0"

syntect = { version = "5.0.0", optional = true, default-features = false, features = ["default-fancy"] }

[features]

nalgebra = ["dep:nalgebra-glm", "crevice/nalgebra"]
serde = ["dep:serde", "enum-map/serde", "nalgebra-glm?/serde-serialize"]
syntax_highlighting = ["dep:syntect"]
