[package]
name = "egui_widgets"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[dependencies]

egui = "0.17"

serde = { version = "1", features = ["derive"], optional = true}
enum-map = { version = "2"}
nalgebra-glm = { version = "0.17", optional = true}
crevice = { version = "0.11" }

lazy_static = "1"

syntect = { version = "5", optional = true, default-features = false, features = ["default-fancy"] }

[features]

nalgebra = ["dep:nalgebra-glm", "crevice/nalgebra"]
serde = ["dep:serde", "enum-map/serde", "nalgebra-glm?/serde-serialize"]
syntax_highlighting = ["dep:syntect"]
