[package]
name = "egui_widgets"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[dependencies]

egui = "0.33.2"
ecolor = "0.21"

serde = { version = "1", features = ["derive"], optional = true}
enum-map = { version = "2"}

glam = { version = "0.30"}
crevice = { version = "0.18" }

lazy_static = "1"

syntect = { version = "5", optional = true, default-features = false, features = ["default-fancy"] }

[features]

serde = ["dep:serde", "enum-map/serde", "glam/serde"]
syntax_highlighting = ["dep:syntect"]
