[package]
name = "skeleton_app"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"


[dependencies]

image = "0.24.2"
winit = "0.26.0"
cgmath = "0.18.0"

env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"

wgpu = "0.12.0"
pollster = "0.2.4"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
anyhow = "1.0.52"

egui = "0.17.0"
epi = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui_winit_platform = "0.14.0"
# [build-dependencies]
# glob = "0.3.0"
# fs_extra = "1.2.0"
