[package]
name = "skeleton_app"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[dependencies]

image = "0.24"
winit = "0.26"

log = "0.4"

wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.7", features = [ "derive" ] }
anyhow = "1"

egui = "0.17"
epi = "0.17"
egui_wgpu_backend = "0.17"
egui_winit_platform = "0.14"

spin_sleep = "1"

nalgebra-glm = { version = "0.17", features = ["serde-serialize"] }

# [build-dependencies]
# glob = "0.3.0"
# fs_extra = "1.2.0"
